--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
             <version>2.6.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.wink</groupId>
+            <artifactId>wink-jackson-provider</artifactId>
+        </dependency>
+
 
     </dependencies>
 
